[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
regex = "1.5"
structopt = "0.3.26"
notify-rust = "4.0.2"
chrono = "0.4.24"
